--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3",
-    "vuex-class-component": "^2.3.2"
+    "vuex-class-component": "^2.3.2",
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
